welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value getLargeurMonde
	if (x==getLargeurMonde()-1 && y==getHauteurMonde()-1) {
               ^ColumnByColumn:14: error: not enough arguments for method positionFinale: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
	while (!positionFinale()) {
                              ^ColumnByColumn:17: error: not found: value getHauteurMonde
		if (y == getHauteurMonde()-1) {
                         ^